# rag-persona-chatbot

./: .gitignore  README.md  app.py  build_index.py  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
chroma_db/017a3f90-bda1-437b-9689-77adbc03c73e/: index_metadata.pickle
chroma_db/53a5e109-6f00-46d5-adc2-a999ef5cd1f7/: index_metadata.pickle
chroma_db/d7939341-ff30-409a-a471-1b5491fec85e/: index_metadata.pickle
personas/: persona.json
