[project]
name = "rag-persona-chatbot"
version = "0.1.0"
description = "RAG chatbot with persona extraction using Groq Llama3 + ChromaDB"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "streamlit>=1.35",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "groq>=1.2.0",
    "ollama>=0.6.2",
]

[tool.hatch.build.targets.wheel]
packages = []
